# Prune

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  core_engine.cpp  doUnitTests.sh  finalroadmap.md  fusion_magics.cpp  generate_magics.cpp  util_magic.cpp  util_magic.hpp  verifying.py
.github/workflows/: build.yml
Fathom/src/: tbprobe.c
Magic bitboards/: fusion_magics.cpp  generate_magics.cpp  util_magic.hpp  verifying.py
comparate/: collectData.py  matchManager.py  pruning_games.py
core/: BestMoveFinder.cpp  BestMoveFinder.hpp  BestMoveFinder.tpp  Const.cpp  Const.hpp  Evaluator.cpp  Evaluator.hpp  Functions.cpp  Functions.hpp  GameState.cpp  GameState.hpp  LegalMoveGenerator.cpp  LegalMoveGenerator.hpp  Makefile  Move.cpp  Move.hpp  MoveOrdering.cpp  MoveOrdering.hpp  NNUE.cpp  NNUE.hpp  NNUEnoSIMD.cpp  PGNtoUCI.py  PieceBoard.hpp  TablebaseProbe.cpp  TablebaseProbe.hpp  TimeManagement.cpp  TimeManagement.hpp  TranspositionTable.cpp  TranspositionTable.hpp  collectData.cpp  corrhist.cpp  corrhist.hpp  datasetStats.cpp  dependencies.mk  dfrctest.epd  embeder.cpp  embeder.hpp  engine.cpp  find_states.py  game.uci  (+32 more)
nnue/: Makefile  TRAINING.md  collectData.py  compileData.py  model.py  pyzipmanager.py  train.py  zipmanager.cpp
other_core/: BestMoveFinder.hpp  Compressor.hpp  Const.hpp  Evaluator.hpp  Functions.hpp  GameState.hpp  LegalMoveGenerator.hpp  Move.hpp  TranspositionTable.hpp  compareVersion.cpp  find_states.py  game.uci  other_core_engine.cpp  playGame.cpp
tests/: complex_test.cpp  hello_test.cpp  perft_test.cpp  polyglotHash_test.cpp  tf_test.cpp
tf_nn/: chess_fen_move_model.ipynb  fen_to_input.hpp  get_model_prediction.hpp  test_model_prediction.cpp
